# unbundle

./: .gitignore  Anchor.toml  DEPLOYMENT.md  README.md  SETUP_STATUS.md  VERCEL_CHECKLIST.md  env.local.example  firebase.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
app/: build-wrapper.js  build.sh  layout.tsx  next.config.js  package.json  page.tsx  postcss.config.js  tailwind.config.js  vercel.json
app/app/: error.js  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.js  not-found.tsx  page.tsx
app/app/demo/: layout.tsx  page.tsx
app/app/thanks/: page.tsx
app/careers/: page.tsx
app/components/: Balances.tsx  ClaimCard.tsx  ConnectWallet.tsx  Examples.tsx  Footer.tsx  Nav.tsx  RedeemCard.tsx  StakeCard.tsx  WaitlistForm.tsx
app/config/: mints.json.example
app/demo/: page.tsx
app/lib/: analytics.ts  firebase.ts  recaptcha.ts  utils.ts
app/lib/idl/: faucet.ts  splitter.ts
app/pages/: _error.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: Examples.tsx  Footer.tsx  HowItWorks.tsx  Nav.tsx  UseCases.tsx  WaitlistForm.tsx  WhyDifferent.tsx
firebase/: firestore.rules
functions/: package-lock.json  package.json
functions/lib/: index.js  index.js.map
functions/src/: index.ts
lib/: firebase.ts  recaptcha.ts
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
programs/splitter/: Cargo.toml
public/: favicon-placeholder.txt  og-placeholder.txt
scripts/: create_mints.ts  initialize_faucet.ts  initialize_split.ts
tests/: faucet.ts  splitter.ts
(+1 files in other folders)
