[package]
name = "faucet"
version = "0.1.0"
description = "Faucet program for GGL token minting"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"


